--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -1,7 +1,7 @@
  <div >
 
       <form class="form-signin" ng-controller="LoginCtrl">
-        <h2 class="form-signin-heading">Please log in</h2>
+        <h2 class="form-signin-heading">Please Log In</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" ng-model ="user.email" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only" >Password</label>
