--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -2,8 +2,8 @@
 
       <form class="form-signin" ng-controller="LoginCtrl">
         <h2 class="form-signin-heading">Please Log In</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" ng-model ="user.email" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputEmail" class="sr-only">User Name</label>
+        <input type="text" id="inputUname" ng-model ="user.uname" class="form-control" placeholder="User Name" required autofocus>
         <label for="inputPassword" class="sr-only" >Password</label>
         <input type="password" id="inputPassword" ng-model ="user.password" class="form-control" placeholder="Password" required>
         <div class="checkbox">
