--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,5 +1,5 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="container" ng-controller="CarCtrl">
+<div class="container" >
     <!-- Example row of columns -->
     <div class="col-md-12">
         <div class="panel panel-info">
