--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -1,5 +1,18 @@
-<p>This is the partial for view 2.</p>
-<p>
-  Showing of 'interpolate' filter:
-  {{ 'Current version is v%VERSION%.' | interpolate }}
-</p>
+<div class="jumbotron text-center">
+    <h1 ui-view="title"></h1>
+    <p>This page demonstrates <span class="text-danger">multiple</span> and <span class="text-danger">named</span> views.</p>
+</div>
+
+<div class="row">
+
+    <!-- COLUMN ONE NAMED VIEW -->
+    <div class="col-sm-6">
+        <div ui-view="columnOne"></div>
+    </div>
+    
+    <!-- COLUMN TWO NAMED VIEW -->
+    <div class="col-sm-6">
+        <div ui-view="columnTwo"></div>
+    </div>
+
+</div>    
