--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -1,18 +1,17 @@
 <div class="jumbotron text-center">
     <h1 ui-view="title"></h1>
-    <p>This page demonstrates <span class="text-danger">multiple</span> and <span class="text-danger">named</span> views.</p>
 </div>
-
 <div class="row">
-
-    <!-- COLUMN ONE NAMED VIEW -->
-    <div class="col-sm-6">
-        <div ui-view="columnOne"></div>
-    </div>
-    
     <!-- COLUMN TWO NAMED VIEW -->
-    <div class="col-sm-6">
+    <div class="col-sm-2" align="left">
         <div ui-view="columnTwo"></div>
     </div>
-
-</div>    
+    <!-- COLUMN ONE NAMED VIEW -->
+    <div class="col-sm-10">
+        <div class="panel panel-info">
+            <div class="panel-body">
+                <h3 ui-view="columnOne"></h3>
+            </div>
+        </div>
+    </div>
+</div>
