--- a/app/partials/about/usfulLinks.html
+++ b/app/partials/about/usfulLinks.html
@@ -1,7 +1,7 @@
 <div class="panel panel-info">
     <div class="panel-body">
         <ul>
-            <li ng-repeat="link in links"><a href="{{link.link}}">{{link.value}}</a></li>
+            <li ng-repeat="link in links"><a href="http://{{link.link}}">{{link.value}}</a></li>
         </ul>
     </div>
 </div>
