--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -3,7 +3,9 @@
     <!-- Example row of columns -->
     <div class="col-md-12">
         <div class="panel panel-info">
-            <div class="panel-body">Panel Content</div>
+            <div class="panel-body">
+               <p>Now {{carList.length}}car(s) available for sale</p>
+            </div>
         </div>
     </div>
     <div class="col-md-7">
@@ -31,8 +33,8 @@
                                 <td>{{car.price}}</td>
                                 <td>{{car.condition}}</td>
                                 <td>
-                                    <button class="btn btn-xs btn-info" ng-click="editCar(car.id)">Edit</button>
-                                    <button class="btn btn-xs btn-success" ng-click="soldCar(car.id)">Sold</button>
+                                    <button class="btn btn-xs btn-info" ng-click="editCar(car )">Edit</button>
+                                    <button class="btn btn-xs btn-success" ng-click="soldCar(car)">Sold</button>
                                 </td>
                             </tr>
                         </tbody>
