--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -11,7 +11,7 @@
     <div class="col-md-12">
         <div class="panel panel-info">
             <div class="panel-body">
-                <p>Now {{carList.length}}car(s) avilable for sail</p>
+                <p>Now {{carList.length}}car(s) available for sale</p>
             </div>
         </div>
     </div>
